2010-11-22	Stephan Linz <linz@li-pro.net>

	* platform: change version to 2010.12
	* platform: upgarde to u-boot-2010.12-rc1
	* platform: upgarde to linux-2.6.31.13

2010-10-31	Stephan Linz <linz@li-pro.net>

	* common: initial version Xilinx-ML605-MMU-full-12.2
