@@ -171,11 +171,11 @@ PTXCONF_KERNEL_BASE_ADDR=0x20000000
 # Bootstrapping features
 #
 PTXCONF_ARCH_MICROBLAZE_FSBLOB=y
-PTXCONF_ARCH_MICROBLAZE_FSBLOB_ADDR="0xae000000"
+PTXCONF_ARCH_MICROBLAZE_FSBLOB_ADDR="0xaff80000"
 PTXCONF_ARCH_MICROBLAZE_FSBLOB_U_BOOT=y
-PTXCONF_ARCH_MICROBLAZE_FSBLOB_ADDR_U_BOOT="0xae000000"
+PTXCONF_ARCH_MICROBLAZE_FSBLOB_ADDR_U_BOOT="0xaff80000"
 PTXCONF_ARCH_MICROBLAZE_FSBLOB_KERNEL=y
-PTXCONF_ARCH_MICROBLAZE_FSBLOB_ADDR_KERNEL="0xae000000"
+PTXCONF_ARCH_MICROBLAZE_FSBLOB_ADDR_KERNEL="0xaff80000"
 
 #
 # paths & directories           
