@@ -131,8 +131,8 @@ define_int CONFIG_XILINX_INTC_0_SPLB_NUM_MASTERS 4
 define_int CONFIG_XILINX_INTC_0_SPLB_MID_WIDTH 2
 define_int CONFIG_XILINX_INTC_0_SPLB_NATIVE_DWIDTH 32
 define_int CONFIG_XILINX_INTC_0_SPLB_SUPPORT_BURSTS 0
-define_int CONFIG_XILINX_INTC_0_NUM_INTR_INPUTS 8
-define_string CONFIG_XILINX_INTC_0_KIND_OF_INTR 0b11111111111111111111111100010000
+define_int CONFIG_XILINX_INTC_0_NUM_INTR_INPUTS 9
+define_string CONFIG_XILINX_INTC_0_KIND_OF_INTR 0b11111111111111111111111000010000
 define_string CONFIG_XILINX_INTC_0_KIND_OF_EDGE 0b11111111111111111111111111111111
 define_string CONFIG_XILINX_INTC_0_KIND_OF_LVL 0b11111111111111111111111111111111
 define_int CONFIG_XILINX_INTC_0_HAS_IPR 1
@@ -143,6 +143,7 @@ define_int CONFIG_XILINX_INTC_0_IRQ_IS_LEVEL 1
 define_int CONFIG_XILINX_INTC_0_IRQ_ACTIVE 1
 define_string CONFIG_XILINX_INTC_0_HW_VER 2.01.a
 define_string CONFIG_XILINX_INTC_0_INSTANCE xps_intc_0
+# xps_iic_0_IIC2INTC_Irpt
 # PCIe_Bridge_IP2INTC_Irpt
 # xps_sysace_0_SysACE_IRQ
 # xps_ether_0_TemacIntc0_Irpt
