@@ -39,5 +39,3 @@ PLATFORM_CPPFLAGS += -mcpu=v7.30.b
 # Automatic U-Boot position at 0x2ff00000
 CONFIG_SYS_TEXT_BASE = 0x2ff00000
 
-# I2C controller not defined
-
